...
            const SizedBox(height: 24),
            Padding(
              padding: const EdgeInsets.symmetric(horizontal: 24.0),
              child: SizedBox(
                width: double.infinity,
                child: Semantics(
                    label: 'btn_create_project_nav',
                    child: ElevatedButton(
                      key: const Key('btn_create_project_nav'),
                      onPressed: () {
                        Navigator.pushNamed(context, '/create-project');
                      },
                      style: ElevatedButton.styleFrom(
...
